# morse-code-trainer

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
morsecodetrainer/: __main__.py  config.py  trainer.py
morsecodetrainer/gui/: gui.py
