[metadata]
name = morsecodetrainer
version = 0.1.0
author = Nick Touran
author_email = nick@partofthething.com
description = A system that plays tones and lets you fill in the form to learn Morse Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/partofthething/morsecodetrainer
project_urls =
    Bug Tracker = https://github.com/partofthething/morsecodetrainer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    codetrain  = morsecodetrainer.gui.gui:run
